--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <dimen name="dim_logo">200dp</dimen>
+    <dimen name="dim_logo">210dp</dimen>
     <dimen name="txt_20sp">20sp</dimen>
 
     <dimen name="dim_1dp">1dp</dimen>
@@ -16,8 +16,26 @@
     <dimen name="dim_64dp">64dp</dimen>
     <dimen name="dim_72dp">72dp</dimen>
     <dimen name="dim_80dp">80dp</dimen>
-    
+
     <dimen name="dim_10dp">10dp</dimen>
     <dimen name="dim_150dp">150dp</dimen>
+    <dimen name="dim_100dp">100dp</dimen>
+    <dimen name="txt_blood_size">34sp</dimen>
+
+    <dimen name="dim_30dp">30dp</dimen>
+    <dimen name="txt_14sp">14sp</dimen>
+    <dimen name="dim_30sp">30sp</dimen>
+    <dimen name="dim_12dp">12dp</dimen>
+    <dimen name="dim_140dp">140dp</dimen>
+    <dimen name="txt_30sp">30sp</dimen>
+    <dimen name="dim_250dp">250dp</dimen>
+    <dimen name="dim_220dp">220dp</dimen>
+
+
+    <dimen name="dim_n_10dp">-10dp</dimen>
+    <dimen name="dim_n_20dp">-20dp</dimen>
+    <dimen name="dim_n_30dp">-30dp</dimen>
+    <dimen name="dim_35dp">35dp</dimen>
+
 
 </resources>
