--- a/app/src/main/res/layout/fragment_recycle_layout.xml
+++ b/app/src/main/res/layout/fragment_recycle_layout.xml
@@ -1,6 +1,60 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
-</android.support.constraint.ConstraintLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/dim_16dp">
+
+        <LinearLayout
+            style="@style/text_input"
+            android:layout_width="0dp"
+            android:layout_height="@dimen/dim_40dp"
+            android:layout_weight="1"
+            android:orientation="horizontal">
+
+            <Spinner
+                android:id="@+id/donations_list_Fragment_sp_blood_types"
+                style="@style/text_input_edit"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center_horizontal" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            style="@style/text_input"
+            android:layout_width="0dp"
+            android:layout_height="@dimen/dim_40dp"
+            android:layout_weight="1"
+            android:orientation="horizontal">
+
+            <Spinner
+                android:id="@+id/donations_list_Fragment_sp_government"
+                style="@style/text_input_edit"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center_horizontal" />
+
+        </LinearLayout>
+
+
+        <ImageButton
+            android:id="@+id/donations_list_Fragment_i_ben_filter"
+            android:layout_width="@dimen/dim_40dp"
+            android:layout_height="@dimen/dim_40dp"
+            android:layout_gravity="center_vertical"
+            android:background="@drawable/shape_circil" />
+
+    </LinearLayout>
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/donations_list_Fragment_rv_donations"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="@dimen/dim_8dp" />
+
+</LinearLayout>
