--- a/app/src/main/res/layout/fragment_slider.xml
+++ b/app/src/main/res/layout/fragment_slider.xml
@@ -1,6 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@color/slider_bg">
+
+    <android.support.v4.view.ViewPager
+        android:id="@+id/slider_fragment_vp_slider"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginBottom="@dimen/dim_16dp" />
 
 </android.support.constraint.ConstraintLayout>
