--- a/app/src/main/res/layout/items_custom_spinner.xml
+++ b/app/src/main/res/layout/items_custom_spinner.xml
@@ -5,6 +5,7 @@
 
     <TextView
         android:id="@+id/item_spinner_tv_text"
+        android:textColor="@color/txt_color"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
