--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
+    <color name="colorPrimary">#b4000d</color>
+    <color name="colorPrimaryDark">#d11724</color>
     <color name="colorAccent">#FF4081</color>
     <color name="txt_color">#ac5254</color>
+    <color name="txt_color2">#b4000d</color>
+    <color name="white">#fff</color>
+    <color name="red_t">#bbcec3c3</color>
+    <color name="gray">#e5e5e5</color>
+    <color name="slider_bg">#fefefe</color>
 </resources>
